syntax = "proto3";
package rl;

import "common.proto";

message QueryRequest {
  string experiment_id = 1;
  string metric_name = 2;
}

message MetricList {
  repeated Metrics metrics = 1;
}

service AnalyticsService {

  // All nodes report metrics here
  rpc ReportMetrics(Metrics) returns (Status);

  // Experiment controller queries analytics
  rpc QueryMetrics(QueryRequest) returns (MetricList);
}
